--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  supabase_flutter: ^2.0.0
+  supabase_flutter: ^2.6.0
+  phone_numbers_parser: ^8.2.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
