--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -311,6 +311,13 @@ inspector_port = 8083
 # The Deno major version to use.
 deno_version = 1
 
+[functions]
+[functions.env]
+SMTP_HOST = "env(SMTP_HOST)"
+SMTP_PORT = "env(SMTP_PORT)"
+SMTP_USERNAME = "env(SMTP_USERNAME)"
+SMTP_PASSWORD = "env(SMTP_PASSWORD)"
+
 # [edge_runtime.secrets]
 # secret_key = "env(SECRET_VALUE)"
 
